--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.6",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-apollo-hooks": "^0.5.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-popper": "^1.3.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.1",
