--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-popper": "^1.3.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-scroll": "^1.7.15",
     "react-toastify": "^5.4.1",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1"
