--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-animated-slider": "^2.0.0",
     "react-apollo-hooks": "^0.5.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.9.0",
