--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-popper": "^1.3.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-scroll": "^1.7.15",
+    "react-spinners": "^0.7.2",
     "react-toastify": "^5.4.1",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1"
