--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
     "react": "^16.9.0",
