--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^3.6.1",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -21,6 +22,7 @@
     "react-scroll": "^1.7.15",
     "react-spinners": "^0.7.2",
     "react-toastify": "^5.4.1",
+    "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1"
   },
