--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.1",
     "graphql": "^14.5.6",
-    "invariant": "^2.2.4",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-animated-slider": "^2.0.0",
     "react-apollo-hooks": "^0.5.0",
