--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "core-js": "^3.6.1",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-animated-slider": "^2.0.0",
     "react-apollo-hooks": "^0.5.0",
@@ -25,7 +24,8 @@
     "react-toastify": "^5.4.1",
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.3.2",
-    "styled-reset": "^4.0.1"
+    "styled-reset": "^4.0.1",
+    "unfetch": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
