--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1",
-    "unfetch": "^4.1.0"
+    "unfetch": "^4.1.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
