--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.1",
@@ -25,6 +31,7 @@
     "regenerator-runtime": "^0.13.3",
     "styled-components": "^4.3.2",
     "styled-reset": "^4.0.1",
+    "subscriptions-transport-ws": "^0.9.16",
     "unfetch": "^4.1.0",
     "whatwg-fetch": "^3.0.0"
   },
