--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.19",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-link": "^1.2.13",
@@ -15,8 +16,10 @@
     "core-js": "^3.6.1",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
+    "query-string": "^6.9.0",
     "react": "^16.9.0",
     "react-animated-slider": "^2.0.0",
+    "react-apollo": "^3.1.3",
     "react-apollo-hooks": "^0.5.0",
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.9.0",
