--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.1",
+    "firebase": "^7.6.2",
     "graphql": "^14.5.6",
     "moment": "^2.24.0",
     "query-string": "^6.9.0",
